--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -6,7 +6,7 @@
 }
 
 body {
-  padding: 0;
+  padding: 50px;
 }
 
 /* Everything but the jumbotron gets side spacing for mobile first views */
@@ -34,7 +34,7 @@ body {
 .footer {
   padding-top: 19px;
   color: #777;
-  border-top: 1px solid #e5e5e5;
+  border-top: 1px solid #e5e5e5;  
 }
 
 .container-narrow > hr {
