--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,32 +1,24 @@
-<div class="row">
-    <div class="col-md-12">
-        <div class="panel panel-default text-center center-block">
-            <div class="panel-body">            
-                <input type="file" file-reader="uploadedFile" />
-                <hr />
-                <button class="btn btn-success" ng-disabled="uploadDisabled()" ng-click="uploadFile()">Upload</button>
-            </div>
-        </div>
+<div class="panel panel-default text-center col-md-6 col-md-offset-3">
+    <div class="panel-body">
+        <input type="file" file-reader="uploadedFile" />
+        <hr />
+        <button class="btn btn-success" ng-disabled="uploadDisabled" ng-click="uploadFile()">Upload</button>
     </div>
 </div>
-<!-- <div class="panel panel-default">
+
+<div class="panel panel-default col-md-6 col-md-offset-3" ng-if="showValidationErrors">
     <div class="panel-body">
         <table class="table">
-            <thead>
+            <!-- <thead>
                 <tr>
-                    <th ng-repeat="header in parsedCsv[0]">{{header}}</th>                    
+                    <th ng-repeat="header in parsedCsv[0]">{{header}}</th>
                 </tr>
-            </thead>
+            </thead> -->
             <tbody>
-                <tr ng-repeat="row in parsedCsv track by $index">
-                    <td ng-repeat="col in row track by $index">{{ col }}</td>
+                <tr ng-repeat="row in parsedCsv track by $index" ng-class="{'text-danger' : row.isInvalid}">                    
+                    <td ng-repeat="col in row track by $index" ng-if="$index != 7 && $index != 8">{{ col }}</td>
                 </tr>
             </tbody>
         </table>
     </div>
-</div> -->
-<!-- <div class="panel panel-default">
-    <div class="panel-body">
-        <ui-gmap-google-map center='map.center' zoom='map.zoom'></ui-gmap-google-map>
-    </div>
-</div> -->
+</div>
